CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(speedyshare)

SET(QT_USE_QTNETWORK TRUE)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
#SET(CMAKE_INCLUDE_CURRENT_DIR ON)
#SET(CMAKE_AUTOMOC ON)
#SET(CMAKE_PREFIX_PATH "C:\\Qt\\Qt5.1.0\\5.1.0\\msvc2012")
FIND_PACKAGE(Qt4 REQUIRED)

#FIND_PACKAGE(Qt5Core REQUIRED)
#FIND_PACKAGE(Qt5Widgets REQUIRED)
#FIND_PACKAGE(Qt5Network REQUIRED)


FILE(GLOB SRC "code/*.cpp")
FILE(GLOB HEAD "code/*.h")
SOURCE_GROUP(speedyshare FILES ${SRC} ${HEAD})
LIST(APPEND CODE ${SRC} ${HEAD})

FILE(GLOB UI "ui/*.ui")

QT4_WRAP_CPP(speedyshare_headers_moc ${SRC})
QT4_WRAP_UI(speedyshare_ui ${UI})
QT4_ADD_RESOURCES(speedyshare_res "ui/resources.qrc")
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(speedyshare ${CODE} ${UI})


TARGET_LINK_LIBRARIES(speedyshare ${QT_LIBRARIES})

